k8s/manifests/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    app.kubernetes.io/name: couchdb
spec:
  type: ClusterIP
  ports:
  - port: 5984
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: couchdb
